--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-images/collection/small
-images/collection/medium
-images/collection/large
+images/collection/small/*.jpg
+images/collection/medium/*.jpg
+images/collection/large/*.jpg
