--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,6 @@ providers = ["php"]
 
 [variables]
 PHP_VERSION = "8.2"
-PORT = "8080"
 
 [phases.setup]
 nixPkgs = [
@@ -23,75 +22,5 @@ cmds = [
   "if [ -f composer.json ]; then composer install --no-dev --optimize-autoloader; fi"
 ]
 
-[phases.build]
-cmds = [
-  "# Create a router script to handle both static files and API requests",
-  "cat > router.php << 'EOF'",
-  "<?php",
-  "// Get the request URI",
-  "$requestUri = parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH);",
-  "",
-  "// Handle API requests",
-  "if (strpos($requestUri, '/api') === 0) {",
-  "    // Remove /api from the path and look in the api directory",
-  "    $apiPath = substr($requestUri, 4); // Remove '/api'",
-  "    if (empty($apiPath) || $apiPath === '/') {",
-  "        $apiPath = '/index.php';",
-  "    }",
-  "    ",
-  "    $filePath = __DIR__ . '/api' . $apiPath;",
-  "    ",
-  "    // If it's a PHP file, include it",
-  "    if (file_exists($filePath) && pathinfo($filePath, PATHINFO_EXTENSION) === 'php') {",
-  "        chdir(dirname($filePath));",
-  "        include $filePath;",
-  "        return true;",
-  "    }",
-  "    // If it's a directory, try index.php",
-  "    elseif (is_dir($filePath) && file_exists($filePath . '/index.php')) {",
-  "        chdir($filePath);",
-  "        include $filePath . '/index.php';",
-  "        return true;",
-  "    }",
-  "}",
-  "",
-  "// For root path, serve index.html",
-  "if ($requestUri === '/') {",
-  "    if (file_exists(__DIR__ . '/index.html')) {",
-  "        header('Content-Type: text/html');",
-  "        readfile(__DIR__ . '/index.html');",
-  "        return true;",
-  "    }",
-  "}",
-  "",
-  "// For other requests, try to serve static files",
-  "$filePath = __DIR__ . $requestUri;",
-  "if (file_exists($filePath) && is_file($filePath)) {",
-  "    // Determine content type",
-  "    $ext = pathinfo($filePath, PATHINFO_EXTENSION);",
-  "    $contentTypes = [",
-  "        'html' => 'text/html',",
-  "        'css' => 'text/css',",
-  "        'js' => 'application/javascript',",
-  "        'json' => 'application/json',",
-  "        'png' => 'image/png',",
-  "        'jpg' => 'image/jpeg',",
-  "        'jpeg' => 'image/jpeg',",
-  "        'gif' => 'image/gif'",
-  "    ];",
-  "    ",
-  "    if (isset($contentTypes[$ext])) {",
-  "        header('Content-Type: ' . $contentTypes[$ext]);",
-  "    }",
-  "    ",
-  "    readfile($filePath);",
-  "    return true;",
-  "}",
-  "",
-  "// Return false to serve the default index.html",
-  "return false;",
-  "EOF"
-]
-
 [start]
-cmd = "php -S 0.0.0.0:8080 -t /app router.php"
+cmd = "php -S 0.0.0.0:8080 -t /app"
